force-app/main/default/objects/Lead/fields/SF_expirience__c.field-meta.xml
<CustomField>
    <fullName>SF_expirience__c</fullName>
    <label>SF expirience</label>
    <length>100</length>
    <type>Text</type>
</CustomField>