force-app/main/default/objects/Lead/fields/SF_mascot__c.field-meta.xml
<CustomField>
    <fullName>SF_mascot__c</fullName>
    <label>SF mascoute</label>
    <length>100</length>
    <type>Text</type>
</CustomField>