force-app/main/default/objects/Lead/fields/SF_skill__c.field-meta.xml
<CustomField>
    <fullName>SF_skill__c</fullName>
    <label>SF skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>